# myclaw

./: .gitignore  README.md  config.py  mcp_client.py  memory.py  orchestrator.py  orchestratorv3.py  pyproject.toml  requirements.txt  settings.template.yaml  skill_client.py
.github/workflows/: pylint.yml
myclaw/: __init__.py  __main__.py  cli.py  orchestrator.py  tool_base.py
myclaw/tools/: file.py  file_search.py  git.py  terminal.py  web_search.py
tools/: TerminalTool.py
